# yolox_rk3588_ros

./: README.md
yolox_rk3588_cpp/: CMakeLists.txt  install.sh  package.xml
yolox_rk3588_cpp/include/yolox_rk3588_cpp/: common.hpp  file_utils.hpp  image_utils.hpp  postprocess.hpp  rknn_type.hpp  yolox.hpp
yolox_rk3588_cpp/src/: file_utils.cpp  image_utils.cpp  main.cpp  postprocess.cpp  yolox.cpp
yolox_rk3588_plugin/: CMakeLists.txt  package.xml  yolox_rk3588_plugin.xml
yolox_rk3588_plugin/include/yolox_rk3588_plugin/: yolox_rk3588_plugin.hpp
yolox_rk3588_plugin/src/: yolox_rk3588_plugin.cpp
yolox_rk3588_ros/: CMakeLists.txt  package.xml
yolox_rk3588_ros/include/yolox_rk3588_ros/: yolox_rk3588_ros.hpp
yolox_rk3588_ros/src/: yolox_rk3588_ros.cpp
